Fix sending mails & 2FA by invalid E-Mail addresses

--- a/languages/de_DE.po
+++ b/languages/de_DE.po
@@ -3,3 +3,6 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Language: German\n"
+
+msgid "Settings"
+msgstr "Einstellungen"
